Syntax Analysis/syntax.output
Terminals unused in grammar

   T_EOF


State 304 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: global_declarations main_function

    2 global_declarations: global_declarations global_declaration
    3                    | %empty

    4 global_declaration: typedef_declaration
    5                   | enum_declaration
    6                   | class_declaration
    7                   | union_declaration
    8                   | global_var_declaration
    9                   | func_declaration

   10 typedef_declaration: T_TYPEDEF typename listspec T_ID dims T_SEMI

   11 typename: standard_type
   12         | T_ID

   13 standard_type: T_CHAR
   14              | T_INT
   15              | T_FLOAT
   16              | T_STRING
   17              | T_VOID

   18 listspec: T_LIST
   19         | %empty

   20 dims: dims dim
   21     | %empty

   22 dim: T_LBRACK T_ICONST T_RBRACK
   23    | T_LBRACK T_RBRACK

   24 enum_declaration: T_ENUM T_ID enum_body T_SEMI

   25 enum_body: T_LBRACE id_list T_RBRACE

   26 id_list: id_list T_COMMA T_ID initializer
   27        | T_ID initializer

   28 initializer: T_ASSIGN init_value
   29            | %empty

   30 init_value: expression
   31           | T_LBRACE init_values T_RBRACE

   32 expression: expression T_OROP expression
   33           | expression T_ANDOP expression
   34           | expression T_EQUOP expression
   35           | expression T_RELOP expression
   36           | expression T_ADDOP expression
   37           | expression T_MULOP expression
   38           | T_NOTOP expression
   39           | T_ADDOP expression
   40           | T_SIZEOP expression
   41           | T_INCDEC variable
   42           | variable T_INCDEC
   43           | variable
   44           | variable T_LPAREN expression_list T_RPAREN
   45           | T_LENGTH T_LPAREN general_expression T_RPAREN
   46           | T_NEW T_LPAREN general_expression T_RPAREN
   47           | constant
   48           | T_LPAREN general_expression T_RPAREN
   49           | T_LPAREN standard_type T_RPAREN
   50           | listexpression

   51 variable: variable T_LBRACK general_expression T_RBRACK
   52         | variable T_DOT T_ID
   53         | T_LISTFUNC T_LPAREN general_expression T_RPAREN
   54         | decltype T_ID
   55         | T_THIS

   56 general_expression: general_expression T_COMMA general_expression
   57                   | assignment

   58 assignment: variable T_ASSIGN assignment
   59           | expression

   60 expression_list: general_expression
   61                | %empty

   62 constant: T_CCONST
   63         | T_ICONST
   64         | T_FCONST
   65         | T_SCONST

   66 listexpression: T_LBRACK expression_list T_RBRACK

   67 init_values: init_values T_COMMA init_value
   68            | init_value

   69 class_declaration: T_CLASS T_ID class_body T_SEMI

   70 class_body: parent T_LBRACE members_methods T_RBRACE

   71 parent: T_COLON T_ID
   72       | %empty

   73 members_methods: members_methods access member_or_method
   74                | access member_or_method

   75 access: T_PRIVATE T_COLON
   76       | T_PROTECTED T_COLON
   77       | T_PUBLIC T_COLON
   78       | %empty

   79 member_or_method: member
   80                 | method

   81 member: var_declaration
   82       | anonymous_union

   83 var_declaration: typename variabledefs T_SEMI

   84 variabledefs: variabledefs T_COMMA variabledef
   85             | variabledef

   86 variabledef: listspec T_ID dims

   87 anonymous_union: T_UNION union_body T_SEMI

   88 union_body: T_LBRACE fields T_RBRACE

   89 fields: fields field
   90       | field

   91 field: var_declaration

   92 method: short_func_declaration

   93 short_func_declaration: short_par_func_header T_SEMI
   94                       | nopar_func_header T_SEMI

   95 short_par_func_header: func_header_start T_LPAREN parameter_types T_RPAREN

   96 func_header_start: typename listspec T_ID

   97 parameter_types: parameter_types T_COMMA typename pass_list_dims
   98                | typename pass_list_dims

   99 pass_list_dims: T_REFER
  100               | listspec dims

  101 nopar_func_header: func_header_start T_LPAREN T_RPAREN

  102 union_declaration: T_UNION T_ID union_body T_SEMI

  103 global_var_declaration: typename init_variabledefs T_SEMI

  104 init_variabledefs: init_variabledefs T_COMMA init_variabledef
  105                  | init_variabledef

  106 init_variabledef: variabledef initializer

  107 func_declaration: short_func_declaration
  108                 | full_func_declaration

  109 full_func_declaration: full_par_func_header T_LBRACE decl_statements T_RBRACE
  110                      | nopar_class_func_header T_LBRACE decl_statements T_RBRACE
  111                      | nopar_func_header T_LBRACE decl_statements T_RBRACE

  112 full_par_func_header: class_func_header_start T_LPAREN parameter_list T_RPAREN
  113                     | func_header_start T_LPAREN parameter_list T_RPAREN

  114 class_func_header_start: typename listspec func_class T_ID

  115 func_class: T_ID T_METH

  116 parameter_list: parameter_list T_COMMA typename pass_variabledef
  117               | typename pass_variabledef

  118 pass_variabledef: variabledef
  119                 | T_REFER T_ID

  120 nopar_class_func_header: class_func_header_start T_LPAREN T_RPAREN

  121 decl_statements: declarations statements
  122                | declarations
  123                | statements
  124                | %empty

  125 declarations: declarations decltype typename variabledefs T_SEMI
  126             | decltype typename variabledefs T_SEMI

  127 decltype: T_STATIC
  128         | %empty

  129 statements: statements statement
  130           | statement

  131 statement: expression_statement
  132          | if_statement
  133          | while_statement
  134          | for_statement
  135          | switch_statement
  136          | return_statement
  137          | io_statement
  138          | comp_statement
  139          | T_CONTINUE T_SEMI
  140          | T_BREAK T_SEMI
  141          | T_SEMI

  142 expression_statement: general_expression T_SEMI

  143 if_statement: T_IF T_LPAREN general_expression T_RPAREN statement if_tail

  144 if_tail: T_ELSE statement
  145        | %empty

  146 while_statement: T_WHILE T_LPAREN general_expression T_RPAREN statement

  147 for_statement: T_FOR T_LPAREN optexpr T_SEMI optexpr T_SEMI optexpr T_RPAREN statement

  148 optexpr: general_expression
  149        | %empty

  150 switch_statement: T_SWITCH T_LPAREN general_expression T_RPAREN switch_tail

  151 switch_tail: T_LBRACE decl_cases T_RBRACE
  152            | single_casestatement

  153 decl_cases: declarations casestatements
  154           | declarations
  155           | casestatements
  156           | %empty

  157 casestatements: casestatements casestatement
  158               | casestatement

  159 casestatement: T_CASE constant T_COLON casestatement
  160              | T_CASE constant T_COLON statements
  161              | T_DEFAULT T_COLON statements

  162 single_casestatement: T_CASE constant T_COLON single_casestatement
  163                     | T_CASE constant T_COLON statement

  164 return_statement: T_RETURN optexpr T_SEMI

  165 io_statement: T_CIN T_INP in_list T_SEMI
  166             | T_COUT T_OUT out_list T_SEMI

  167 in_list: in_list T_INP in_item
  168        | in_item

  169 in_item: variable

  170 out_list: out_list T_OUT out_item
  171         | out_item

  172 out_item: general_expression

  173 comp_statement: T_LBRACE decl_statements T_RBRACE

  174 main_function: main_header T_LBRACE decl_statements T_RBRACE

  175 main_header: T_INP T_MAIN T_LPAREN T_RPAREN


Terminals, with rules where they appear

$end (0) 0
error (256)
T_ICONST (258) 22 63
T_FCONST (259) 64
T_CCONST (260) 62
T_SCONST (261) 65
T_EOF (262)
T_TYPEDEF (263) 10
T_CHAR (264) 13
T_INT (265) 14
T_FLOAT (266) 15
T_STRING (267) 16
T_CLASS (268) 69
T_PRIVATE (269) 75
T_PROTECTED (270) 76
T_PUBLIC (271) 77
T_VOID (272) 17
T_STATIC (273) 127
T_UNION (274) 87 102
T_ENUM (275) 24
T_LIST (276) 18
T_CONTINUE (277) 139
T_BREAK (278) 140
T_IF (279) 143
T_ELSE (280) 144
T_WHILE (281) 146
T_FOR (282) 147
T_SWITCH (283) 150
T_CASE (284) 159 160 162 163
T_DEFAULT (285) 161
T_RETURN (286) 164
T_LENGTH (287) 45
T_NEW (288) 46
T_CIN (289) 165
T_COUT (290) 166
T_MAIN (291) 175
T_THIS (292) 55
T_OROP (293) 32
T_ANDOP (294) 33
T_EQUOP (295) 34
T_RELOP (296) 35
T_ADDOP (297) 36 39
T_MULOP (298) 37
T_NOTOP (299) 38
T_INCDEC (300) 41 42
T_SIZEOP (301) 40
T_LPAREN (302) 44 45 46 48 49 53 95 101 112 113 120 143 146 147 150
    175
T_RPAREN (303) 44 45 46 48 49 53 95 101 112 113 120 143 146 147 150
    175
T_SEMI (304) 10 24 69 83 87 93 94 102 103 125 126 139 140 141 142 147
    164 165 166
T_DOT (305) 52
T_COMMA (306) 26 56 67 84 97 104 116
T_ASSIGN (307) 28 58
T_COLON (308) 71 75 76 77 159 160 161 162 163
T_LBRACK (309) 22 23 51 66
T_RBRACK (310) 22 23 51 66
T_REFER (311) 99 119
T_LBRACE (312) 25 31 70 88 109 110 111 151 173 174
T_RBRACE (313) 25 31 70 88 109 110 111 151 173 174
T_METH (314) 115
T_INP (315) 165 167 175
T_OUT (316) 166 170
T_ID (317) 10 12 24 26 27 52 54 69 71 86 96 102 114 115 119
T_LISTFUNC (318) 53


Nonterminals, with rules where they appear

$accept (64)
    on left: 0
program (65)
    on left: 1, on right: 0
global_declarations (66)
    on left: 2 3, on right: 1 2
global_declaration (67)
    on left: 4 5 6 7 8 9, on right: 2
typedef_declaration (68)
    on left: 10, on right: 4
typename (69)
    on left: 11 12, on right: 10 83 96 97 98 103 114 116 117 125 126
standard_type (70)
    on left: 13 14 15 16 17, on right: 11 49
listspec (71)
    on left: 18 19, on right: 10 86 96 100 114
dims (72)
    on left: 20 21, on right: 10 20 86 100
dim (73)
    on left: 22 23, on right: 20
enum_declaration (74)
    on left: 24, on right: 5
enum_body (75)
    on left: 25, on right: 24
id_list (76)
    on left: 26 27, on right: 25 26
initializer (77)
    on left: 28 29, on right: 26 27 106
init_value (78)
    on left: 30 31, on right: 28 67 68
expression (79)
    on left: 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49
    50, on right: 30 32 33 34 35 36 37 38 39 40 59
variable (80)
    on left: 51 52 53 54 55, on right: 41 42 43 44 51 52 58 169
general_expression (81)
    on left: 56 57, on right: 45 46 48 51 53 56 60 142 143 146 148
    150 172
assignment (82)
    on left: 58 59, on right: 57 58
expression_list (83)
    on left: 60 61, on right: 44 66
constant (84)
    on left: 62 63 64 65, on right: 47 159 160 162 163
listexpression (85)
    on left: 66, on right: 50
init_values (86)
    on left: 67 68, on right: 31 67
class_declaration (87)
    on left: 69, on right: 6
class_body (88)
    on left: 70, on right: 69
parent (89)
    on left: 71 72, on right: 70
members_methods (90)
    on left: 73 74, on right: 70 73
access (91)
    on left: 75 76 77 78, on right: 73 74
member_or_method (92)
    on left: 79 80, on right: 73 74
member (93)
    on left: 81 82, on right: 79
var_declaration (94)
    on left: 83, on right: 81 91
variabledefs (95)
    on left: 84 85, on right: 83 84 125 126
variabledef (96)
    on left: 86, on right: 84 85 106 118
anonymous_union (97)
    on left: 87, on right: 82
union_body (98)
    on left: 88, on right: 87 102
fields (99)
    on left: 89 90, on right: 88 89
field (100)
    on left: 91, on right: 89 90
method (101)
    on left: 92, on right: 80
short_func_declaration (102)
    on left: 93 94, on right: 92 107
short_par_func_header (103)
    on left: 95, on right: 93
func_header_start (104)
    on left: 96, on right: 95 101 113
parameter_types (105)
    on left: 97 98, on right: 95 97
pass_list_dims (106)
    on left: 99 100, on right: 97 98
nopar_func_header (107)
    on left: 101, on right: 94 111
union_declaration (108)
    on left: 102, on right: 7
global_var_declaration (109)
    on left: 103, on right: 8
init_variabledefs (110)
    on left: 104 105, on right: 103 104
init_variabledef (111)
    on left: 106, on right: 104 105
func_declaration (112)
    on left: 107 108, on right: 9
full_func_declaration (113)
    on left: 109 110 111, on right: 108
full_par_func_header (114)
    on left: 112 113, on right: 109
class_func_header_start (115)
    on left: 114, on right: 112 120
func_class (116)
    on left: 115, on right: 114
parameter_list (117)
    on left: 116 117, on right: 112 113 116
pass_variabledef (118)
    on left: 118 119, on right: 116 117
nopar_class_func_header (119)
    on left: 120, on right: 110
decl_statements (120)
    on left: 121 122 123 124, on right: 109 110 111 173 174
declarations (121)
    on left: 125 126, on right: 121 122 125 153 154
decltype (122)
    on left: 127 128, on right: 54 125 126
statements (123)
    on left: 129 130, on right: 121 123 129 160 161
statement (124)
    on left: 131 132 133 134 135 136 137 138 139 140 141, on right:
    129 130 143 144 146 147 163
expression_statement (125)
    on left: 142, on right: 131
if_statement (126)
    on left: 143, on right: 132
if_tail (127)
    on left: 144 145, on right: 143
while_statement (128)
    on left: 146, on right: 133
for_statement (129)
    on left: 147, on right: 134
optexpr (130)
    on left: 148 149, on right: 147 164
switch_statement (131)
    on left: 150, on right: 135
switch_tail (132)
    on left: 151 152, on right: 150
decl_cases (133)
    on left: 153 154 155 156, on right: 151
casestatements (134)
    on left: 157 158, on right: 153 155 157
casestatement (135)
    on left: 159 160 161, on right: 157 158 159
single_casestatement (136)
    on left: 162 163, on right: 152 162
return_statement (137)
    on left: 164, on right: 136
io_statement (138)
    on left: 165 166, on right: 137
in_list (139)
    on left: 167 168, on right: 165 167
in_item (140)
    on left: 169, on right: 167 168
out_list (141)
    on left: 170 171, on right: 166 170
out_item (142)
    on left: 172, on right: 170 171
comp_statement (143)
    on left: 173, on right: 138
main_function (144)
    on left: 174, on right: 1
main_header (145)
    on left: 175, on right: 174


State 0

    0 $accept: . program $end

    $default  reduce using rule 3 (global_declarations)

    program              go to state 1
    global_declarations  go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: global_declarations . main_function
    2 global_declarations: global_declarations . global_declaration

    T_TYPEDEF  shift, and go to state 4
    T_CHAR     shift, and go to state 5
    T_INT      shift, and go to state 6
    T_FLOAT    shift, and go to state 7
    T_STRING   shift, and go to state 8
    T_CLASS    shift, and go to state 9
    T_VOID     shift, and go to state 10
    T_UNION    shift, and go to state 11
    T_ENUM     shift, and go to state 12
    T_INP      shift, and go to state 13
    T_ID       shift, and go to state 14

    global_declaration       go to state 15
    typedef_declaration      go to state 16
    typename                 go to state 17
    standard_type            go to state 18
    enum_declaration         go to state 19
    class_declaration        go to state 20
    short_func_declaration   go to state 21
    short_par_func_header    go to state 22
    func_header_start        go to state 23
    nopar_func_header        go to state 24
    union_declaration        go to state 25
    global_var_declaration   go to state 26
    func_declaration         go to state 27
    full_func_declaration    go to state 28
    full_par_func_header     go to state 29
    class_func_header_start  go to state 30
    nopar_class_func_header  go to state 31
    main_function            go to state 32
    main_header              go to state 33


State 3

    0 $accept: program $end .

    $default  accept


State 4

   10 typedef_declaration: T_TYPEDEF . typename listspec T_ID dims T_SEMI

    T_CHAR    shift, and go to state 5
    T_INT     shift, and go to state 6
    T_FLOAT   shift, and go to state 7
    T_STRING  shift, and go to state 8
    T_VOID    shift, and go to state 10
    T_ID      shift, and go to state 14

    typename       go to state 34
    standard_type  go to state 18


State 5

   13 standard_type: T_CHAR .

    $default  reduce using rule 13 (standard_type)


State 6

   14 standard_type: T_INT .

    $default  reduce using rule 14 (standard_type)


State 7

   15 standard_type: T_FLOAT .

    $default  reduce using rule 15 (standard_type)


State 8

   16 standard_type: T_STRING .

    $default  reduce using rule 16 (standard_type)


State 9

   69 class_declaration: T_CLASS . T_ID class_body T_SEMI

    T_ID  shift, and go to state 35


State 10

   17 standard_type: T_VOID .

    $default  reduce using rule 17 (standard_type)


State 11

  102 union_declaration: T_UNION . T_ID union_body T_SEMI

    T_ID  shift, and go to state 36


State 12

   24 enum_declaration: T_ENUM . T_ID enum_body T_SEMI

    T_ID  shift, and go to state 37


State 13

  175 main_header: T_INP . T_MAIN T_LPAREN T_RPAREN

    T_MAIN  shift, and go to state 38


State 14

   12 typename: T_ID .

    $default  reduce using rule 12 (typename)


State 15

    2 global_declarations: global_declarations global_declaration .

    $default  reduce using rule 2 (global_declarations)


State 16

    4 global_declaration: typedef_declaration .

    $default  reduce using rule 4 (global_declaration)


State 17

   96 func_header_start: typename . listspec T_ID
  103 global_var_declaration: typename . init_variabledefs T_SEMI
  114 class_func_header_start: typename . listspec func_class T_ID

    T_LIST  shift, and go to state 39

    $default  reduce using rule 19 (listspec)

    listspec           go to state 40
    variabledef        go to state 41
    init_variabledefs  go to state 42
    init_variabledef   go to state 43


State 18

   11 typename: standard_type .

    $default  reduce using rule 11 (typename)


State 19

    5 global_declaration: enum_declaration .

    $default  reduce using rule 5 (global_declaration)


State 20

    6 global_declaration: class_declaration .

    $default  reduce using rule 6 (global_declaration)


State 21

  107 func_declaration: short_func_declaration .

    $default  reduce using rule 107 (func_declaration)


State 22

   93 short_func_declaration: short_par_func_header . T_SEMI

    T_SEMI  shift, and go to state 44


State 23

   95 short_par_func_header: func_header_start . T_LPAREN parameter_types T_RPAREN
  101 nopar_func_header: func_header_start . T_LPAREN T_RPAREN
  113 full_par_func_header: func_header_start . T_LPAREN parameter_list T_RPAREN

    T_LPAREN  shift, and go to state 45


State 24

   94 short_func_declaration: nopar_func_header . T_SEMI
  111 full_func_declaration: nopar_func_header . T_LBRACE decl_statements T_RBRACE

    T_SEMI    shift, and go to state 46
    T_LBRACE  shift, and go to state 47


State 25

    7 global_declaration: union_declaration .

    $default  reduce using rule 7 (global_declaration)


State 26

    8 global_declaration: global_var_declaration .

    $default  reduce using rule 8 (global_declaration)


State 27

    9 global_declaration: func_declaration .

    $default  reduce using rule 9 (global_declaration)


State 28

  108 func_declaration: full_func_declaration .

    $default  reduce using rule 108 (func_declaration)


State 29

  109 full_func_declaration: full_par_func_header . T_LBRACE decl_statements T_RBRACE

    T_LBRACE  shift, and go to state 48


State 30

  112 full_par_func_header: class_func_header_start . T_LPAREN parameter_list T_RPAREN
  120 nopar_class_func_header: class_func_header_start . T_LPAREN T_RPAREN

    T_LPAREN  shift, and go to state 49


State 31

  110 full_func_declaration: nopar_class_func_header . T_LBRACE decl_statements T_RBRACE

    T_LBRACE  shift, and go to state 50


State 32

    1 program: global_declarations main_function .

    $default  reduce using rule 1 (program)


State 33

  174 main_function: main_header . T_LBRACE decl_statements T_RBRACE

    T_LBRACE  shift, and go to state 51


State 34

   10 typedef_declaration: T_TYPEDEF typename . listspec T_ID dims T_SEMI

    T_LIST  shift, and go to state 39

    $default  reduce using rule 19 (listspec)

    listspec  go to state 52


State 35

   69 class_declaration: T_CLASS T_ID . class_body T_SEMI

    T_COLON  shift, and go to state 53

    $default  reduce using rule 72 (parent)

    class_body  go to state 54
    parent      go to state 55


State 36

  102 union_declaration: T_UNION T_ID . union_body T_SEMI

    T_LBRACE  shift, and go to state 56

    union_body  go to state 57


State 37

   24 enum_declaration: T_ENUM T_ID . enum_body T_SEMI

    T_LBRACE  shift, and go to state 58

    enum_body  go to state 59


State 38

  175 main_header: T_INP T_MAIN . T_LPAREN T_RPAREN

    T_LPAREN  shift, and go to state 60


State 39

   18 listspec: T_LIST .

    $default  reduce using rule 18 (listspec)


State 40

   86 variabledef: listspec . T_ID dims
   96 func_header_start: typename listspec . T_ID
  114 class_func_header_start: typename listspec . func_class T_ID

    T_ID  shift, and go to state 61

    func_class  go to state 62


State 41

  106 init_variabledef: variabledef . initializer

    T_ASSIGN  shift, and go to state 63

    $default  reduce using rule 29 (initializer)

    initializer  go to state 64


State 42

  103 global_var_declaration: typename init_variabledefs . T_SEMI
  104 init_variabledefs: init_variabledefs . T_COMMA init_variabledef

    T_SEMI   shift, and go to state 65
    T_COMMA  shift, and go to state 66


State 43

  105 init_variabledefs: init_variabledef .

    $default  reduce using rule 105 (init_variabledefs)


State 44

   93 short_func_declaration: short_par_func_header T_SEMI .

    $default  reduce using rule 93 (short_func_declaration)


State 45

   95 short_par_func_header: func_header_start T_LPAREN . parameter_types T_RPAREN
  101 nopar_func_header: func_header_start T_LPAREN . T_RPAREN
  113 full_par_func_header: func_header_start T_LPAREN . parameter_list T_RPAREN

    T_CHAR    shift, and go to state 5
    T_INT     shift, and go to state 6
    T_FLOAT   shift, and go to state 7
    T_STRING  shift, and go to state 8
    T_VOID    shift, and go to state 10
    T_RPAREN  shift, and go to state 67
    T_ID      shift, and go to state 14

    typename         go to state 68
    standard_type    go to state 18
    parameter_types  go to state 69
    parameter_list   go to state 70


State 46

   94 short_func_declaration: nopar_func_header T_SEMI .

    $default  reduce using rule 94 (short_func_declaration)


State 47

  111 full_func_declaration: nopar_func_header T_LBRACE . decl_statements T_RBRACE

    T_ICONST    shift, and go to state 71
    T_FCONST    shift, and go to state 72
    T_CCONST    shift, and go to state 73
    T_SCONST    shift, and go to state 74
    T_STATIC    shift, and go to state 75
    T_CONTINUE  shift, and go to state 76
    T_BREAK     shift, and go to state 77
    T_IF        shift, and go to state 78
    T_WHILE     shift, and go to state 79
    T_FOR       shift, and go to state 80
    T_SWITCH    shift, and go to state 81
    T_RETURN    shift, and go to state 82
    T_LENGTH    shift, and go to state 83
    T_NEW       shift, and go to state 84
    T_CIN       shift, and go to state 85
    T_COUT      shift, and go to state 86
    T_THIS      shift, and go to state 87
    T_ADDOP     shift, and go to state 88
    T_NOTOP     shift, and go to state 89
    T_INCDEC    shift, and go to state 90
    T_SIZEOP    shift, and go to state 91
    T_LPAREN    shift, and go to state 92
    T_SEMI      shift, and go to state 93
    T_LBRACK    shift, and go to state 94
    T_LBRACE    shift, and go to state 95
    T_LISTFUNC  shift, and go to state 96

    T_RBRACE  reduce using rule 124 (decl_statements)
    $default  reduce using rule 128 (decltype)

    expression            go to state 97
    variable              go to state 98
    general_expression    go to state 99
    assignment            go to state 100
    constant              go to state 101
    listexpression        go to state 102
    decl_statements       go to state 103
    declarations          go to state 104
    decltype              go to state 105
    statements            go to state 106
    statement             go to state 107
    expression_statement  go to state 108
    if_statement          go to state 109
    while_statement       go to state 110
    for_statement         go to state 111
    switch_statement      go to state 112
    return_statement      go to state 113
    io_statement          go to state 114
    comp_statement        go to state 115


State 48

  109 full_func_declaration: full_par_func_header T_LBRACE . decl_statements T_RBRACE

    T_ICONST    shift, and go to state 71
    T_FCONST    shift, and go to state 72
    T_CCONST    shift, and go to state 73
    T_SCONST    shift, and go to state 74
    T_STATIC    shift, and go to state 75
    T_CONTINUE  shift, and go to state 76
    T_BREAK     shift, and go to state 77
    T_IF        shift, and go to state 78
    T_WHILE     shift, and go to state 79
    T_FOR       shift, and go to state 80
    T_SWITCH    shift, and go to state 81
    T_RETURN    shift, and go to state 82
    T_LENGTH    shift, and go to state 83
    T_NEW       shift, and go to state 84
    T_CIN       shift, and go to state 85
    T_COUT      shift, and go to state 86
    T_THIS      shift, and go to state 87
    T_ADDOP     shift, and go to state 88
    T_NOTOP     shift, and go to state 89
    T_INCDEC    shift, and go to state 90
    T_SIZEOP    shift, and go to state 91
    T_LPAREN    shift, and go to state 92
    T_SEMI      shift, and go to state 93
    T_LBRACK    shift, and go to state 94
    T_LBRACE    shift, and go to state 95
    T_LISTFUNC  shift, and go to state 96

    T_RBRACE  reduce using rule 124 (decl_statements)
    $default  reduce using rule 128 (decltype)

    expression            go to state 97
    variable              go to state 98
    general_expression    go to state 99
    assignment            go to state 100
    constant              go to state 101
    listexpression        go to state 102
    decl_statements       go to state 116
    declarations          go to state 104
    decltype              go to state 105
    statements            go to state 106
    statement             go to state 107
    expression_statement  go to state 108
    if_statement          go to state 109
    while_statement       go to state 110
    for_statement         go to state 111
    switch_statement      go to state 112
    return_statement      go to state 113
    io_statement          go to state 114
    comp_statement        go to state 115


State 49

  112 full_par_func_header: class_func_header_start T_LPAREN . parameter_list T_RPAREN
  120 nopar_class_func_header: class_func_header_start T_LPAREN . T_RPAREN

    T_CHAR    shift, and go to state 5
    T_INT     shift, and go to state 6
    T_FLOAT   shift, and go to state 7
    T_STRING  shift, and go to state 8
    T_VOID    shift, and go to state 10
    T_RPAREN  shift, and go to state 117
    T_ID      shift, and go to state 14

    typename        go to state 118
    standard_type   go to state 18
    parameter_list  go to state 119


State 50

  110 full_func_declaration: nopar_class_func_header T_LBRACE . decl_statements T_RBRACE

    T_ICONST    shift, and go to state 71
    T_FCONST    shift, and go to state 72
    T_CCONST    shift, and go to state 73
    T_SCONST    shift, and go to state 74
    T_STATIC    shift, and go to state 75
    T_CONTINUE  shift, and go to state 76
    T_BREAK     shift, and go to state 77
    T_IF        shift, and go to state 78
    T_WHILE     shift, and go to state 79
    T_FOR       shift, and go to state 80
    T_SWITCH    shift, and go to state 81
    T_RETURN    shift, and go to state 82
    T_LENGTH    shift, and go to state 83
    T_NEW       shift, and go to state 84
    T_CIN       shift, and go to state 85
    T_COUT      shift, and go to state 86
    T_THIS      shift, and go to state 87
    T_ADDOP     shift, and go to state 88
    T_NOTOP     shift, and go to state 89
    T_INCDEC    shift, and go to state 90
    T_SIZEOP    shift, and go to state 91
    T_LPAREN    shift, and go to state 92
    T_SEMI      shift, and go to state 93
    T_LBRACK    shift, and go to state 94
    T_LBRACE    shift, and go to state 95
    T_LISTFUNC  shift, and go to state 96

    T_RBRACE  reduce using rule 124 (decl_statements)
    $default  reduce using rule 128 (decltype)

    expression            go to state 97
    variable              go to state 98
    general_expression    go to state 99
    assignment            go to state 100
    constant              go to state 101
    listexpression        go to state 102
    decl_statements       go to state 120
    declarations          go to state 104
    decltype              go to state 105
    statements            go to state 106
    statement             go to state 107
    expression_statement  go to state 108
    if_statement          go to state 109
    while_statement       go to state 110
    for_statement         go to state 111
    switch_statement      go to state 112
    return_statement      go to state 113
    io_statement          go to state 114
    comp_statement        go to state 115


State 51

  174 main_function: main_header T_LBRACE . decl_statements T_RBRACE

    T_ICONST    shift, and go to state 71
    T_FCONST    shift, and go to state 72
    T_CCONST    shift, and go to state 73
    T_SCONST    shift, and go to state 74
    T_STATIC    shift, and go to state 75
    T_CONTINUE  shift, and go to state 76
    T_BREAK     shift, and go to state 77
    T_IF        shift, and go to state 78
    T_WHILE     shift, and go to state 79
    T_FOR       shift, and go to state 80
    T_SWITCH    shift, and go to state 81
    T_RETURN    shift, and go to state 82
    T_LENGTH    shift, and go to state 83
    T_NEW       shift, and go to state 84
    T_CIN       shift, and go to state 85
    T_COUT      shift, and go to state 86
    T_THIS      shift, and go to state 87
    T_ADDOP     shift, and go to state 88
    T_NOTOP     shift, and go to state 89
    T_INCDEC    shift, and go to state 90
    T_SIZEOP    shift, and go to state 91
    T_LPAREN    shift, and go to state 92
    T_SEMI      shift, and go to state 93
    T_LBRACK    shift, and go to state 94
    T_LBRACE    shift, and go to state 95
    T_LISTFUNC  shift, and go to state 96

    T_RBRACE  reduce using rule 124 (decl_statements)
    $default  reduce using rule 128 (decltype)

    expression            go to state 97
    variable              go to state 98
    general_expression    go to state 99
    assignment            go to state 100
    constant              go to state 101
    listexpression        go to state 102
    decl_statements       go to state 121
    declarations          go to state 104
    decltype              go to state 105
    statements            go to state 106
    statement             go to state 107
    expression_statement  go to state 108
    if_statement          go to state 109
    while_statement       go to state 110
    for_statement         go to state 111
    switch_statement      go to state 112
    return_statement      go to state 113
    io_statement          go to state 114
    comp_statement        go to state 115


State 52

   10 typedef_declaration: T_TYPEDEF typename listspec . T_ID dims T_SEMI

    T_ID  shift, and go to state 122


State 53

   71 parent: T_COLON . T_ID

    T_ID  shift, and go to state 123


State 54

   69 class_declaration: T_CLASS T_ID class_body . T_SEMI

    T_SEMI  shift, and go to state 124


State 55

   70 class_body: parent . T_LBRACE members_methods T_RBRACE

    T_LBRACE  shift, and go to state 125


State 56

   88 union_body: T_LBRACE . fields T_RBRACE

    T_CHAR    shift, and go to state 5
    T_INT     shift, and go to state 6
    T_FLOAT   shift, and go to state 7
    T_STRING  shift, and go to state 8
    T_VOID    shift, and go to state 10
    T_ID      shift, and go to state 14

    typename         go to state 126
    standard_type    go to state 18
    var_declaration  go to state 127
    fields           go to state 128
    field            go to state 129


State 57

  102 union_declaration: T_UNION T_ID union_body . T_SEMI

    T_SEMI  shift, and go to state 130


State 58

   25 enum_body: T_LBRACE . id_list T_RBRACE

    T_ID  shift, and go to state 131

    id_list  go to state 132


State 59

   24 enum_declaration: T_ENUM T_ID enum_body . T_SEMI

    T_SEMI  shift, and go to state 133


State 60

  175 main_header: T_INP T_MAIN T_LPAREN . T_RPAREN

    T_RPAREN  shift, and go to state 134


State 61

   86 variabledef: listspec T_ID . dims
   96 func_header_start: typename listspec T_ID .
  115 func_class: T_ID . T_METH

    T_METH  shift, and go to state 135

    T_LPAREN  reduce using rule 96 (func_header_start)
    $default  reduce using rule 21 (dims)

    dims  go to state 136


State 62

  114 class_func_header_start: typename listspec func_class . T_ID

    T_ID  shift, and go to state 137


State 63

   28 initializer: T_ASSIGN . init_value

    T_ICONST    shift, and go to state 71
    T_FCONST    shift, and go to state 72
    T_CCONST    shift, and go to state 73
    T_SCONST    shift, and go to state 74
    T_STATIC    shift, and go to state 75
    T_LENGTH    shift, and go to state 83
    T_NEW       shift, and go to state 84
    T_THIS      shift, and go to state 87
    T_ADDOP     shift, and go to state 88
    T_NOTOP     shift, and go to state 89
    T_INCDEC    shift, and go to state 90
    T_SIZEOP    shift, and go to state 91
    T_LPAREN    shift, and go to state 92
    T_LBRACK    shift, and go to state 94
    T_LBRACE    shift, and go to state 138
    T_LISTFUNC  shift, and go to state 96

    $default  reduce using rule 128 (decltype)

    init_value      go to state 139
    expression      go to state 140
    variable        go to state 141
    constant        go to state 101
    listexpression  go to state 102
    decltype        go to state 142


State 64

  106 init_variabledef: variabledef initializer .

    $default  reduce using rule 106 (init_variabledef)


State 65

  103 global_var_declaration: typename init_variabledefs T_SEMI .

    $default  reduce using rule 103 (global_var_declaration)


State 66

  104 init_variabledefs: init_variabledefs T_COMMA . init_variabledef

    T_LIST  shift, and go to state 39

    $default  reduce using rule 19 (listspec)

    listspec          go to state 143
    variabledef       go to state 41
    init_variabledef  go to state 144


State 67

  101 nopar_func_header: func_header_start T_LPAREN T_RPAREN .

    $default  reduce using rule 101 (nopar_func_header)


State 68

   98 parameter_types: typename . pass_list_dims
  117 parameter_list: typename . pass_variabledef

    T_LIST   shift, and go to state 39
    T_REFER  shift, and go to state 145

    $default  reduce using rule 19 (listspec)

    listspec          go to state 146
    variabledef       go to state 147
    pass_list_dims    go to state 148
    pass_variabledef  go to state 149


State 69
